Added google data analytics

--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
     <style>
       @import url('https://fonts.cdnfonts.com/css/stylus-bt');
 </style>
-
     <link rel="stylesheet" content="text/css" href="./Styles/main.css" />
+
+<!--     Add Google Data Management -->
+     <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-0BSNYLH2D8"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-0BSNYLH2D8");
+    </script>
   </head>
   <body>
     <div class="container">
