--- a/projectDetail.html
+++ b/projectDetail.html
@@ -10,6 +10,19 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
+     <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-0BSNYLH2D8"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-0BSNYLH2D8");
+    </script>
   </head>
   <body>
     <div class="container">
