Added google data analytics

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,19 @@
     <title>Projects | Arshcon & Form Limited</title>
     <link rel="stylesheet" href="./Styles/main.css" />
     <link rel="stylesheet" href="./Styles/project.css" />
+     <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-0BSNYLH2D8"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-0BSNYLH2D8");
+    </script>
   </head>
   <body>
     <div class="container">
