--- a/About.html
+++ b/About.html
@@ -159,8 +159,7 @@
                 <img src="./Images/experienced.png" alt="Experience" />
                 <h3>Years of Experience</h3>
                 <p>
-                  Our team has successfully completed numerous projects across
-                  Nigeria.
+                  With over a decade of proven expertise in the construction industry, we have consistently delivered quality, reliability, and innovation across residential, commercial, and industrial projects..
                 </p>
               </div>
               <div class="feature">
